Bug #133580 --> make image/tiff attachments show up as external attachments instead of acting non-existent in the message. r=ducarroz sr=bienvenu